Fix sidebar field spacing

--- a/resources/css/components/publish.css
+++ b/resources/css/components/publish.css
@@ -50,7 +50,7 @@ code.parent-url {
 
     aside & {
         /* Decrease */
-        @apply gap-2;
+        @apply gap-x-2 gap-y-3 lg:gap-y-6;
     }
 
     .form-group {
